--- a/web/styles/drop_down_menu.css
+++ b/web/styles/drop_down_menu.css
@@ -7,8 +7,8 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: var(--primary);
-    opacity: 0.8;
+    background-color: var(--dark2);
+    opacity: 0.75;
     border-radius: 15px;
     height: min-content;
 }
@@ -16,7 +16,7 @@
 .drop-down-menu .button::after{
     content: "";
     height: 2px;
-    background: linear-gradient(90deg,rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.30) 50%, rgba(255, 255, 255, 0.15) 100%);
+    background: linear-gradient(90deg,rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.20) 50%, rgba(255, 255, 255, 0.1) 100%);
     margin-top: 5px;
     width: 100%;
 }
