--- a/web/styles/social_container.css
+++ b/web/styles/social_container.css
@@ -3,7 +3,7 @@
  */
 
 .social-container{
-    background-color: var(--dark);
+    background-color: var(--dark1);
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -13,6 +13,7 @@
     max-height: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
+    color: var(--secondary1);
 }
 
 .pp-container{
@@ -27,6 +28,7 @@
 .pp-container img{
     width: 100%;
     aspect-ratio: 1/1;
+    border-radius: 30%;
 }
 
 .social-status{
@@ -61,7 +63,6 @@
 
 .status-text{
     margin-left: 5px;
-    color: gray;
     font-size: 0.7em;
     word-break: break-all;
     max-width: 80%;
@@ -69,4 +70,5 @@
 
 .username{
     margin-top: 5px;
+    color: var(--secondary2);
 }	
