--- a/web/styles/login.css
+++ b/web/styles/login.css
@@ -34,9 +34,9 @@
     width: 100%;
     margin: 3px 0 15px;
     padding: 5px 7px;
-    border: 2px solid var(--dark-secondary);
+    border: 2px solid var(--dark1-secondary);
     border-radius: 5px;
-    background-color: var(--dark);
+    background-color: var(--dark1);
     color: white;
 }
 
@@ -48,16 +48,16 @@
     padding: 5px;
     border: 1px solid transparent;
     border-radius: 5px;
-    background-color: var(--glow);
+    background-color: var(--glow-shadow);
     color: var(--text-primary);
     cursor: pointer;
     transition: 0.35s;
 }
 
 @keyframes login-submit-glow {
-    0% { box-shadow: 0 0 17px 0px var(--glow); }
-    50% { box-shadow: 0 0 19px 5px var(--glow); }
-    100% { box-shadow: 0 0 17px 0px var(--glow); }
+    0% { box-shadow: 0 0 17px 0px var(--glow-shadow); }
+    50% { box-shadow: 0 0 19px 5px var(--glow-shadow); }
+    100% { box-shadow: 0 0 17px 0px var(--glow-shadow); }
 }
 .login-submit:hover {
     filter: brightness(1.3);
