--- a/web/styles/nav.css
+++ b/web/styles/nav.css
@@ -7,7 +7,7 @@ nav{
     min-width: 150px;
     max-width: 350px;
     height: 100%;
-    background-color: var(--dark-secondary);
+    background-color: var(--dark2);
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -15,7 +15,7 @@ nav{
 
 #nav-selection{
     height: 100px;
-    background-color: var(--dark);
+    background-color: var(--dark1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
