--- a/web/styles/window.css
+++ b/web/styles/window.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    background-color: var(--dark);
+    background-color: var(--dark1);
     border-radius: 6px;
 
     &.window-maximized {
