--- a/web/styles/window_minimized.css
+++ b/web/styles/window_minimized.css
@@ -5,7 +5,7 @@
 .window.window-minimized {
     display: flex;
     flex-direction: row;
-    background-color: var(--dark);
+    background-color: var(--dark1);
     border-radius: 6px 6px 0 0;
     padding: 5px;
 }
