--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -5,6 +5,14 @@ Fenêtre pouvant contenir des interfaces
 -->
 
 <div class="window window-visible" id="{{id}}" style="left: 0; top: 0;">
+    <div class="window-resizer corner tl"></div>
+    <div class="window-resizer corner tr"></div>
+    <div class="window-resizer corner bl"></div>
+    <div class="window-resizer corner br"></div>
+    <div class="window-resizer t"></div>
+    <div class="window-resizer b"></div>
+    <div class="window-resizer l"></div>
+    <div class="window-resizer r"></div>
     <div class="window-header">
         <div class="window-title">{{title}}</div>
         <div class="window-buttons">
