--- a/web/fragments/server_container.html
+++ b/web/fragments/server_container.html
@@ -10,9 +10,9 @@ Elément de la liste des salons
     <div class="pp-container">
         <img src="{{pp_link}}">
     </div>
-    <div class="content-container">
-        <span class="server-name" style="background: -webkit-linear-gradient({{server_name_color}});">{{name}}</span>
-        <div class="social-status">
+    <div class="server-content-container">
+        <span class="server-name" style="background-image: linear-gradient(90deg, {{server_name_color}});">{{name}}</span>
+        <div class="server-status">
             {{status}}
         </div>
     </div>
