--- a/web/styles/social_container.css
+++ b/web/styles/social_container.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     cursor: pointer;
     align-items: center;
-    max-height: 100px;
+    height: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: var(--secondary1);
