--- a/web/fragments/server_container.html
+++ b/web/fragments/server_container.html
@@ -7,7 +7,7 @@ Elément de la liste des salons
 -->
 
 <div class="server-container" id="{{id}}" style="background-image: url({{bg_image}});">
-    <div class="pp-container">
+    <div class="server-pp-container">
         <img src="{{pp_link}}">
     </div>
     <div class="server-content-container">
