--- a/web/fragments/terminal.html
+++ b/web/fragments/terminal.html
@@ -9,7 +9,7 @@ Contenu de la fenêtre du terminal
         <div class="terminal-body-container" id="{{id}}-content"><!-- content --></div>
     </div>
     <div class="terminal-footer">
-        <input type="text" class="terminal-input" placeholder="Ecrivez une commande..." autocomplete="off">
-        <div class="terminal-send">Envoyer</div>
+        <div class="terminal-prefix">Cd0s_ $</div>
+        <span class="terminal-input" role="textbox" contenteditable></span>
     </div>
 </div>
