--- a/web/styles/social_container.css
+++ b/web/styles/social_container.css
@@ -20,9 +20,8 @@
     display: flex;
     margin-left: 5px;
     align-items: center;
-    width: 28%;
-    max-width: 60px;
-    min-width: 30px;
+    width: 60px;
+    height: 60px;
 }
 
 .pp-container img{
