--- a/web/fragments/server_container.html
+++ b/web/fragments/server_container.html
@@ -12,7 +12,7 @@ Elément de la liste des salons
     </div>
     <div class="server-content-container">
         <span class="server-name" style="background-image: linear-gradient(90deg, {{server_name_color}});">{{name}}</span>
-        <div class="server-status">
+        <div class="server-status" style="color: {{server_statut_color}};">
             {{status}}
         </div>
     </div>
