--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -14,7 +14,9 @@ Fenêtre pouvant contenir des interfaces
     <div class="window-resizer l"></div>
     <div class="window-resizer r"></div>
     <div class="window-header">
-        <div class="window-title">{{title}}</div>
+        <div class="window-header-movable">
+            <div class="window-title" style="background-image: linear-gradient(90deg{{window_name_color}});">{{title}}</div>
+        </div>
         <div class="window-buttons">
             <div class="window-button window-minimize">_</div>
             <div class="window-button window-maximize">[]</div>
