--- a/web/fragments/window_minimized.html
+++ b/web/fragments/window_minimized.html
@@ -4,6 +4,6 @@ Fenêtre minimisée
 -->
 
 <div class="window window-minimized" id="{{id}}">
-    <div class="window-title">{{title}}</div>
+    <div class="window-minimized-title" style="background-image: linear-gradient(90deg{{window_name_color}});">{{title}}</div>
     <div class="window-button window-close">X</div>
 </div>
