--- a/web/styles/terminal.css
+++ b/web/styles/terminal.css
@@ -50,13 +50,13 @@
 
 .terminal-input {
     all: unset;
-    margin: 0 5px;
     flex-grow: 1;
     align-self: center;
     display: block;
     max-height: 100px;
     line-height: 20px;
     width: 100%;
+    font-size: 0.9em;
 
     overflow-y: auto;
     overflow-x: hidden;
@@ -77,7 +77,7 @@
   }
 
 .terminal-prefix {
-    margin: 5px;
+    margin: 3px 0px 3px 3px;
     color: var(--title);
     width: fit-content;
     border-radius: 8px;
