--- a/web/styles/window_minimized.css
+++ b/web/styles/window_minimized.css
@@ -8,12 +8,20 @@
     background-color: var(--dark1);
     border-radius: 6px 6px 0 0;
     padding: 5px;
+    width: 13% !important;
 }
 
-.window-title {
-    width: 100%;
+.window-minimized-title {
     padding: 0 5px;
+    width: 100% !important;
     cursor: move;
+    background-clip: text;
+    width: fit-content;
+    color: transparent;
+    display: inline;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .window-minimized .window-title {
